manage cors auth list